--- a/Source/OEXUserLicenseAgreementViewController.xib
+++ b/Source/OEXUserLicenseAgreementViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <deployment version="4352" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +13,6 @@
                 <outlet property="activityIndicator" destination="pMz-QC-2nz" id="DF8-j5-gu4"/>
                 <outlet property="closeButton" destination="w6A-nU-hdw" id="rYY-mp-Qts"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="webView" destination="r7T-Mv-Iru" id="gar-Dq-d61"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,15 +20,10 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r7T-Mv-Iru">
-                    <rect key="frame" x="0.0" y="20" width="375" height="607"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <dataDetectorType key="dataDetectorTypes"/>
-                </webView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jsf-vB-Psj">
                     <rect key="frame" x="0.0" y="627" width="375" height="40"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w6A-nU-hdw">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w6A-nU-hdw">
                             <rect key="frame" x="54.5" y="5" width="266" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="ehO-Ee-nmr"/>
@@ -39,7 +31,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                             <state key="normal" title="CLOSE">
-                                <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="titleColor" systemColor="darkTextColor"/>
                                 <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
@@ -72,21 +64,23 @@
                     </constraints>
                 </activityIndicatorView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="0Dh-ug-p6y"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="centerY" secondItem="pMz-QC-2nz" secondAttribute="centerY" id="2lh-bO-H1e"/>
                 <constraint firstItem="jsf-vB-Psj" firstAttribute="bottom" secondItem="0Dh-ug-p6y" secondAttribute="bottom" id="4js-45-jAt"/>
-                <constraint firstItem="r7T-Mv-Iru" firstAttribute="leading" secondItem="0Dh-ug-p6y" secondAttribute="leading" id="Mwq-ja-fPf"/>
-                <constraint firstItem="r7T-Mv-Iru" firstAttribute="trailing" secondItem="0Dh-ug-p6y" secondAttribute="trailing" id="NNj-9m-tm7"/>
+                <constraint firstItem="jsf-vB-Psj" firstAttribute="trailing" secondItem="0Dh-ug-p6y" secondAttribute="trailing" id="B1Z-E7-izW"/>
+                <constraint firstItem="jsf-vB-Psj" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="SpP-RU-R9J"/>
                 <constraint firstAttribute="centerX" secondItem="pMz-QC-2nz" secondAttribute="centerX" id="VbL-xW-yeZ"/>
-                <constraint firstItem="jsf-vB-Psj" firstAttribute="trailing" secondItem="r7T-Mv-Iru" secondAttribute="trailing" id="fFT-8H-TNc"/>
-                <constraint firstItem="jsf-vB-Psj" firstAttribute="leading" secondItem="r7T-Mv-Iru" secondAttribute="leading" id="hgQ-1L-83D"/>
-                <constraint firstItem="0Dh-ug-p6y" firstAttribute="top" secondItem="r7T-Mv-Iru" secondAttribute="top" id="nvb-QD-eHN"/>
-                <constraint firstItem="jsf-vB-Psj" firstAttribute="top" secondItem="r7T-Mv-Iru" secondAttribute="bottom" id="xes-fC-zgs"/>
+                <constraint firstItem="jsf-vB-Psj" firstAttribute="leading" secondItem="0Dh-ug-p6y" secondAttribute="leading" id="aZ2-vp-iv2"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <viewLayoutGuide key="safeArea" id="0Dh-ug-p6y"/>
-            <point key="canvasLocation" x="533" y="275"/>
+            <point key="canvasLocation" x="532" y="274.81259370314842"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="darkTextColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
